--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<nav>
 		<h1> <img src="logo.jpg" style="height: 50px;width: 50px;"> LAKSHYA RESULT</h1>
 		<ul>
-			<li><a href="result.html">Home</a></li>
+			<li><a href="index.html">Home</a></li>
 			<li><a href="">Letest Job </a>
 				<ul>
 					<li><a href="https://ssc.gov.in/candidate-portal/one-time-registration/home-page">SSC</a></li>
