--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 			<li><a href="results.html">Result</a></li>
 			<li><a href="admid.html">Admid Card</a></li>
 			<li><a href="answer.html">Answer Key</a></li>
-			<li><a href="Syllabus.html">Syllabus</a></li>
+			<li><a href="syllabus.html">Syllabus</a></li>
 		</ul>
 	</nav>
 	<h2 style="color: #0E2B2F; text-align: center;  ">Lakshya Result :LAKSHYA RESULT.COM  Latest Jobs Online Form at Lakshya Results 2024</h2>
